Corrigir bugs, otimizar código e preparar para deploy - melhorias em responsividade, compatibilidade e confiabilidade

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta property="og:title" content="Condomínio Estância da Serra" />
 		<meta property="og:description" content="Viva perto da natureza com conforto e segurança. Lotes amplos em condomínio planejado." />
 		<meta property="og:type" content="website" />
-		<meta property="og:image" content="./media/logo-horizontal.png" />
+		<meta property="og:image" content="./media/logo-provisoria.jpeg" />
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="twitter:title" content="Condomínio Estância da Serra" />
 		<meta name="twitter:description" content="Lotes amplos em meio à natureza. Acompanhe o progresso das obras." />
@@ -24,6 +24,6 @@
 	</head>
 	<body>
 		<div id="root"></div>
-		<script type="module" src="/src/main.tsx"></script>
+		<script type="module" src="./src/main.tsx"></script>
 	</body>
 </html>
