feat: Implementa efeito de blur progressivo, melhora legibilidade de textos e otimiza performance
- Adiciona efeito de blur progressivo na imagem hero que inicia após carregamento
- Melhora sistema de tipografia com cores e sombras para máxima legibilidade
- Implementa sistema responsivo clamp() para todos os tamanhos de tela
- Adiciona terreno.png como fundo na seção About
- Melhora botões com gradientes e animações mais vivas
- Adiciona preload de recursos críticos para melhor performance
- Implementa margens seguras para evitar overflow em todas as telas
- Otimiza breakpoints para notebooks, tablets e dispositivos móveis
- Atualiza cores para melhor contraste e acessibilidade

--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="twitter:title" content="Condomínio Estância da Serra" />
 		<meta name="twitter:description" content="Lotes amplos em meio à natureza. Acompanhe o progresso das obras." />
+		
+		<!-- Preload recursos críticos para performance -->
+		<link rel="preload" href="./public/media/logomaislarga.jpeg" as="image" fetchpriority="high" />
+		<link rel="preload" href="./public/media/hero-placeholder.mp4" as="video" />
+		<link rel="preload" href="./public/gallery/1.jpg" as="image" />
+		
+		<!-- DNS prefetch otimizado -->
+		<link rel="dns-prefetch" href="//fonts.googleapis.com" />
+		<link rel="dns-prefetch" href="//fonts.gstatic.com" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet" />
