--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta property="og:title" content="Condomínio Estância da Serra" />
 		<meta property="og:description" content="Viva perto da natureza com conforto e segurança. Lotes amplos em condomínio planejado." />
 		<meta property="og:type" content="website" />
-		<meta property="og:image" content="./media/logo-provisoria.jpeg" />
+		<meta property="og:image" content="/media/logo-provisoria.jpeg" />
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="twitter:title" content="Condomínio Estância da Serra" />
 		<meta name="twitter:description" content="Lotes amplos em meio à natureza. Acompanhe o progresso das obras." />
@@ -19,12 +19,9 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet" />
-		<link rel="icon" type="image/svg+xml" href="favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		
 		<title>Estância da Serra</title>
-		<script>
-			// Analytics placeholder - remover em produção se não for usado
-			// window.analytics = { track:(e,d)=>console.log('analytics event',e,d) };
-		</script>
 	</head>
 	<body>
 		<div id="root"></div>
