--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="theme-color" content="#667A2B" />
-		<meta name="description" content="Condomínio Estância da Serra - lotes em meio à natureza." />
-		<meta property="og:title" content="Condomínio Estância da Serra" />
-		<meta property="og:description" content="Viva perto da natureza com conforto e segurança. Lotes amplos em condomínio planejado." />
+		<meta name="description" content="Chacreamento Estância da Serra - lotes em meio à natureza." />
+		<meta property="og:title" content="Chacreamento Estância da Serra" />
+		<meta property="og:description" content="Viva perto da natureza com conforto e segurança. Lotes amplos em chacreamento planejado." />
 		<meta property="og:type" content="website" />
 		<meta property="og:image" content="/media/logo-provisoria.jpeg" />
 		<meta name="twitter:card" content="summary_large_image" />
-		<meta name="twitter:title" content="Condomínio Estância da Serra" />
+		<meta name="twitter:title" content="Chacreamento Estância da Serra" />
 		<meta name="twitter:description" content="Lotes amplos em meio à natureza. Acompanhe o progresso das obras." />
 		
 		<!-- DNS prefetch otimizado -->
